--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       property="og:image"
       content="[your-deployment-link]/images/story-thumbnail-2048.jpg"
     />
-    <meta property="og:image:secure_url" content="[your-deployment-link]" />
+    <meta property="og:image:secure_url" content="https://jimbonanzaa.github.io/2048-game/" />
 
     <title>2048 GAME</title>
     <link rel="stylesheet" href="styles.css" />
@@ -35,7 +35,7 @@
           <div class="share-label">Share:</div>
           <div class="share-icons">
             <a
-              href="https://www.facebook.com/sharer/sharer.php?u=[deployment-link]"
+              href="https://www.facebook.com/sharer/sharer.php?u=https://jimbonanzaa.github.io/2048-game/"
               target="_blank"
             >
               <img src="images/share_2048-fb.svg" alt="" srcset="" />
