Added repo link

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:site_name" content="I coded a game with Zuitt!" />
     <meta
       property="og:image"
-      content="[your-deployment-link]/images/story-thumbnail-2048.jpg"
+      content="https://jimbonanzaa.github.io/2048-game/images/story-thumbnail-2048.jpg"
     />
     <meta property="og:image:secure_url" content="https://jimbonanzaa.github.io/2048-game/" />
 
@@ -21,7 +21,7 @@
   <body>
     <div class="container">
       <h1>2048</h1>
-      <h2>Created by Jimbo Carlo Delfin</h2>
+      <h2>Created by Jimbo Delfin</h2>
 
       <hr id="top-line" />
 
